# linux_practice

./: CMakeLists.txt  main.cpp
code/CH07/: set_ticker.c  ticker_demo.c
code/CH08/: forkdemo1.c
compile/: CMakeCache.txt  Makefile  cmake_install.cmake  linux_practice
